fixed word wrap in light mode

--- a/styles/light-style.css
+++ b/styles/light-style.css
@@ -202,6 +202,10 @@ button:hover {
     flex-direction: column-reverse;
 }
 
+#container-el p{
+    word-wrap: break-word;
+}
+
 
 
 .outside-li {
